New OBJ importer: edge sharp values are seemingly random and unexpected #97820

Closed
opened 2022-05-03 20:58:52 +02:00 by Jesse Yurkovich · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-05-03 17:49, hash: 04df0a3b8c

Short description of error
I haven't been able to track down why this is. The code seems ok at first glance. But it looks like edge Sharp flags are being set on geometry that should be entirely smooth. And there are some objects with the opposite issue where before they were sharp but now not. I'm not sure if that's expected but the Sphere issue present in both repros below is certainly not.

Python Importer C++ Importer
python_sphere.png cpp_sphere.png
Python Importer C++ Importer
python_box.png cpp_box.png

Exact steps for others to reproduce the error

  • Create a default UV sphere
  • Go into edit mode and triangulate
  • Shade entire object Smooth
  • Export using either Python or C++ OBJ exporters
  • Import using C++ importer
  • Observe random edge Sharps

Note: The box example is from the following:
CornellBox-Glossy.mtl

CornellBox-Glossy.obj

System Information Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 Blender Version Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-05-03 17:49, hash: 04df0a3b8c **Short description of error** I haven't been able to track down why this is. The code seems ok at first glance. But it looks like edge Sharp flags are being set on geometry that should be entirely smooth. And there are some objects with the opposite issue where before they were sharp but now not. I'm not sure if that's expected but the Sphere issue present in both repros below is certainly not. | Python Importer | C++ Importer | | -- | -- | | ![python_sphere.png](https://archive.blender.org/developer/F13049806/python_sphere.png) | ![cpp_sphere.png](https://archive.blender.org/developer/F13049808/cpp_sphere.png) | | Python Importer | C++ Importer | | -- | -- | | ![python_box.png](https://archive.blender.org/developer/F13049811/python_box.png) | ![cpp_box.png](https://archive.blender.org/developer/F13049813/cpp_box.png) | **Exact steps for others to reproduce the error** - Create a default UV sphere - Go into edit mode and triangulate - Shade entire object Smooth - Export using either Python or C++ OBJ exporters - Import using C++ importer - Observe random edge Sharps Note: The box example is from the following: [CornellBox-Glossy.mtl](https://archive.blender.org/developer/F13049816/CornellBox-Glossy.mtl) [CornellBox-Glossy.obj](https://archive.blender.org/developer/F13049817/CornellBox-Glossy.obj)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Contributor

The same issue happened in the glTF importer. I'd love to know how to avoid it. The "star shaped" pattern of sharp edges occurs around a vertex where the split normals should line up but don't. Look carefully and you can see there are (at least) two distinct lines here.
Normal.png
Using Python, I found this happens only when using normals_split_custom_set (not normals_split_custom_set_from_vertices), and it happens despite the normals passed in to the set function being identical at those corners (reading them back out after setting gives different values than what was passed in).

The same issue [happened](https://github.com/KhronosGroup/glTF-Blender-IO/issues/1069#issuecomment-632843520) in the glTF importer. I'd love to know how to avoid it. The "star shaped" pattern of sharp edges occurs around a vertex where the split normals should line up but don't. Look carefully and you can see there are (at least) two distinct lines here. ![Normal.png](https://archive.blender.org/developer/F13050033/Normal.png) Using Python, I found this happens only when using `normals_split_custom_set` (not `normals_split_custom_set_from_vertices`), and it happens despite the normals passed in to the set function being identical at those corners (reading them back out after setting gives different values than what was passed in).
Aras Pranckevicius self-assigned this 2022-05-04 05:50:16 +02:00

@scurest in OBJ case, it seems that the issue was with normals that are not exactly unit length (due to text format only having limited number of float digits). If the glTF case was with text-based files, maybe that was the reason as well?

@scurest in OBJ case, it *seems* that the issue was with normals that are not exactly unit length (due to text format only having limited number of float digits). If the glTF case was with text-based files, maybe that was the reason as well?

This issue was referenced by f02d54440d

This issue was referenced by f02d54440dea3716893962c6fcbe6e2f9173666f

This issue was referenced by cf8922ef57

This issue was referenced by cf8922ef577083668a22d52b9b01fc545bafd206

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:48 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97820
No description provided.